gccida/g2/finish_enum
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6469:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6470:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6472:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6479:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6487:4: error: expected ';' after expression
rtx rtl; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6487:5: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtx rtl; // rbx 
    ^~~
    rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6485:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6489:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6491:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6504:19: error: expected expression
v6 = ( tree_node *)*( &global_trees + 11); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6504:8: error: use of undeclared identifier 'tree_node'
v6 = ( tree_node *)*( &global_trees + 11); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6505:25: error: expected expression
elements = ( tree_node *)*( &global_trees + 11); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6505:14: error: use of undeclared identifier 'tree_node'
elements = ( tree_node *)*( &global_trees + 11); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6570:1: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtl = i->int_cst.rtl; 
^~~
rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6485:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6572:10: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rttree = rtl[6].fld[0].rttree; 
         ^~~
         rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6485:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6573:1: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtl->fld[0].rtwint = ( __int64)enumtypea; 
^~~
rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6485:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6574:1: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtl[2].fld[0].rtwint = low; 
^~~
rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6485:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6575:14: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
*( _QWORD *)&rtl[4] = v23->int_cst.int_cst.high; 
             ^~~
             rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6485:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6576:1: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtl[3].fld[0].rtint = v23->type.align & 0xFFFFFF | rtl[3].fld[0].rtint & 0xFF000000; 
^~~
rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6485:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6576:52: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtl[3].fld[0].rtint = v23->type.align & 0xFFFFFF | rtl[3].fld[0].rtint & 0xFF000000; 
                                                   ^~~
                                                   rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/c-decl.c:6485:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rdx 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/finish_enum/src/obj/c-decl.o] Error 1
